Fixed bug on safari.

--- a/selection/static/stylesheet/style_multiple.css
+++ b/selection/static/stylesheet/style_multiple.css
@@ -305,6 +305,7 @@
     width: 230px !important;
     height: 230px;
     margin-left: 1em !important;
+    margin-top: 1em !important;
     padding-top: 1em !important;
     padding-bottom: 0px !important;
     padding-left: 0px !important;
